deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colored-canavas
spec:
  replicas: 3
  selector:
    matchLabels:
      app: canavas
  template:
    metadata:
      labels:
        app: canavas
    spec:
      containers:
      - name: blue
        image: avinashdesireddy/colored-canavas:latest
        imagePullPolicy: Always
