deploy/demo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: canavas
spec:
  selector:
    app: canavas
  ports:
  - port: 8080
    targetPort: 8080
