deploy/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canavas-demo
spec:
  ingressClassName: nginx-default
  rules:
  - host: canavas-demo.cluster.avinashdesireddy.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: canavas
            port:
              number: 80
